crates/aura-app/tests/ui_signals/runtime_channel_wait_helper_private.rs
fn main() {
    let _ = aura_app::ui::workflows::messaging::wait_for_runtime_channel_state;
}
